--- a/.github/workflows/ShiftLeft.yaml
+++ b/.github/workflows/ShiftLeft.yaml
@@ -13,14 +13,14 @@ jobs:
     env:
       APP_ID: d94d64cc30f548827ee175f7e665707116015df298461965a2660c711fc920eb
       BRANCH_NAME: main
-      SCAN_ID: c608b76312948c00d3879c5d77db25a28f2f28c7e836a4dcb1dd120093592609
-      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://9706-103-213-1-241.ngrok.io/resultapi\"\
-        ,\"SL_RESULTPARSER_API_HOST\":\"https://04ee-103-213-1-241.ngrok.io/resultparserapi\"\
+      SCAN_ID: fdf001435143b3b80329a11c197e43cc81ea8dd9fe4d7c52eaa8fb6f22a02e65
+      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://7fd1-103-213-1-241.ngrok.io/resultapi\"\
+        ,\"SL_RESULTPARSER_API_HOST\":\"https://fc36-103-213-1-241.ngrok.io/resultparserapi\"\
         }')}}"
     steps:
     - name: Retrieve Token Info
       id: auth_token
-      run: "respJson=$(curl --location --request GET 'https://9706-103-213-1-241.ngrok.io/resultapi/aws/ecr/token'\
+      run: "respJson=$(curl --location --request GET 'https://7fd1-103-213-1-241.ngrok.io/resultapi/aws/ecr/token'\
         \  --header 'Authorization: Bearer ${{secrets.CLI_ACCESS_TOKEN}}'  --data-raw\
         \ ' ' )\necho \"::set-output name=authTokenJson::$respJson\""
     - uses: actions/checkout@v2
