--- a/.github/workflows/ShiftLeft.yaml
+++ b/.github/workflows/ShiftLeft.yaml
@@ -13,14 +13,14 @@ jobs:
     env:
       APP_ID: d94d64cc30f548827ee175f7e665707116015df298461965a2660c711fc920eb
       BRANCH_NAME: main
-      SCAN_ID: c176e527c9cfba2b759dffcbb738dab32023be83d91832ab8f60f39b12817e46
-      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://54ec-103-213-1-241.ngrok.io/resultapi\"\
-        ,\"SL_RESULTPARSER_API_HOST\":\"https://0c8c-103-213-1-241.ngrok.io/resultparserapi\"\
+      SCAN_ID: 24ce702b6ec3bf5605bf53595ace49aef00f7120c17e3138e660df053ec5e881
+      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://fb27-103-213-1-241.ngrok.io/resultapi\"\
+        ,\"SL_RESULTPARSER_API_HOST\":\"https://e227-103-213-1-241.ngrok.io/resultparserapi\"\
         }')}}"
     steps:
     - name: Retrieve Token Info
       id: auth_token
-      run: "respJson=$(curl --location --request GET 'https://54ec-103-213-1-241.ngrok.io/resultapi/aws/ecr/token'\
+      run: "respJson=$(curl --location --request GET 'https://fb27-103-213-1-241.ngrok.io/resultapi/aws/ecr/token'\
         \  --header 'Authorization: Bearer ${{secrets.CLI_ACCESS_TOKEN}}'  --data-raw\
         \ ' ' )\necho \"::set-output name=authTokenJson::$respJson\""
     - uses: actions/checkout@v2
