--- a/.github/workflows/Securin-aspm.yaml
+++ b/.github/workflows/Securin-aspm.yaml
@@ -11,16 +11,16 @@ on:
 jobs:
   scanning:
     env:
-      APP_ID: 7db1fcd65cca4976f8f4f5b3c71018f35af490a12a5fb917c3cffefe2e2a6116
+      APP_ID: a3ab73daf7385dd87cd8ab545d6cf2209f3fd3b5cbcc2f4075b71ee5f73d8412
       BRANCH_NAME: main
-      SCAN_ID: 75331eebb2b6d7a5d2815f95cdce75f62845c9c2dfb98f3ee3f22a1cf7edc950
-      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://b35e-103-213-1-241.ngrok.io/resultapi\"\
-        ,\"SL_RESULTPARSER_API_HOST\":\"https://d967-103-213-1-241.ngrok.io/resultparserapi\"\
+      SCAN_ID: ac85fc27fedefe62a2edd78d9ddb2ca35c4f721ad30feecf743c28a81d27664f
+      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://slresultapi.qa.securin.io/resultapi\"\
+        ,\"SL_RESULTPARSER_API_HOST\":\"https://slresultparserapi.qa.securin.io/resultparserapi\"\
         }')}}"
     steps:
     - name: Retrieve Token Info
       id: auth_token
-      run: "respJson=$(curl --location --request GET 'https://b35e-103-213-1-241.ngrok.io/resultapi/aws/ecr/token'\
+      run: "respJson=$(curl --location --request GET 'https://slresultapi.qa.securin.io/resultapi/aws/ecr/token'\
         \  --header 'Authorization: Bearer ${{secrets.CLI_ACCESS_TOKEN}}'  --data-raw\
         \ ' ' ) \necho \"authTokenJson=$respJson\" >> $GITHUB_OUTPUT"
     - uses: actions/checkout@v3
